# libinstpatch

./: CMakeLists.txt  COPYING  README.md  azure-pipelines.yml  config.h.cmake  libinstpatch-1.0.pc.in  libinstpatch.pc.in
cmake/: DefaultDirs.cmake  GObjectIntrospectionMacros.cmake
docs/reference/: CMakeLists.txt
libinstpatch/: CMakeLists.txt  IpatchBase.c  IpatchBase.h  IpatchContainer.c  IpatchContainer.h  IpatchContainer_notify.c  IpatchConvert_DLS2.c  IpatchConvert_DLS2.h  IpatchConvert_Gig.c  IpatchConvert_Gig.h  IpatchConvert_SF2.c  IpatchConvert_SF2.h  IpatchConvert_SLI.c  IpatchConvert_SLI.h  IpatchConverter.c  IpatchConverter.h  IpatchConverterSF2VoiceCache.c  IpatchConverterSF2VoiceCache.h  IpatchConverter_priv.h  IpatchDLS2.c  IpatchDLS2.h  IpatchDLS2Conn.c  IpatchDLS2Conn.h  IpatchDLS2Info.c  IpatchDLS2Info.h  IpatchDLS2Inst.c  IpatchDLS2Inst.h  IpatchDLS2Region.c  IpatchDLS2Region.h  IpatchDLS2Sample.c  IpatchDLS2Sample.h  IpatchDLSFile.c  IpatchDLSFile.h  IpatchDLSFile_priv.h  IpatchDLSReader.c  IpatchDLSReader.h  IpatchDLSWriter.c  IpatchDLSWriter.h  IpatchFile.c  IpatchFile.h  (+167 more)
tests/: sample_list_test.c  sample_test.c
utils/: CMakeLists.txt  riff_dump.c
